--- a/css/abbas.css
+++ b/css/abbas.css
@@ -362,7 +362,7 @@ h3:after{
 	padding:50px 20px;
 }
 
-.content-education{paddding:0;}
+.content-education{padding:0;}
 	
 .content-education .degree h4{
 	font-size:23px;
