--- a/css/abbas.css
+++ b/css/abbas.css
@@ -11,7 +11,7 @@ section{
 	padding: 100Px;
 }
 @media only screen  and (orientation:portrait) and (max-width:1000px){
-	section{padding: 80px 20px;}
+	section{padding: 50px 20px;}
 	}
 
 /*----- end geniral------*/
@@ -249,7 +249,8 @@ h3{
 	}
 	
 	h3{
-		font-size:30px	
+		font-size:30px;
+		margin-bottom:20px;
 	}
 	
 }
